[ADD] es 6 minimal

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <table cellspacing="5"></table>
 
-    <button onclick="initStage()">reset</button>
+    <button onclick="init()">reset</button>
     <div id="current-player">
         next player is:
     </div>
@@ -117,7 +117,7 @@
     <input type="number" value="3" max="10" min="1" name="grid-size" id="input-grid-size">
     <label for="grid-size">Grid Size</label>
 
-    <script src="./app-esnext.js"></script>
+    <script src="./app-esnext-minimal.js"></script>
 </body>
 
 </html>
